# P10

./: .gitignore  README.md  pyproject.toml  pytest.ini
config/: settings.py  urls.py
support/: admin.py  apps.py  factories.py  mixins.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
support/tests/: test_comments.py  test_contributors.py  test_issues.py  test_models.py  test_permissions.py  test_projects.py  test_serializers.py  test_users.py  test_views.py
